# speecheval

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml
apps/web/: Dockerfile  (+8 more)
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 196dbb39ffb4_foundation_schema.py  5b4180d2e001_phase2_runtime.py
backend/app/: cli.py  main.py
backend/app/adapters/: __init__.py  artifact_only.py  base.py
backend/app/api/: deps.py
backend/app/api/v1/: baselines.py  benchmark_cards.py  comparisons.py  datasets.py  health.py  listening_studies.py  models.py  policies.py  projects.py  router.py  runs.py  system.py
backend/app/artifacts/: storage.py
backend/app/comparison/: integrity.py  service.py  statistics.py
backend/app/core/: config.py
backend/app/db/: seed.py  session.py
backend/app/execution/: events.py  lifecycle.py  profiles.py  runtime.py
backend/app/listening/: service.py
backend/app/metrics/: __init__.py  base.py  plugins.py  registry.py  signal.py  text.py
backend/app/models/: base.py  entities.py
backend/app/observability/: logging.py  metrics.py
backend/app/reporting/: cards.py
backend/app/schemas/: common.py  contracts.py
backend/app/services/: domain.py  errors.py  evidence.py
backend/app/workers/: executor.py  queue.py  tasks.py  worker.py
backend/tests/: conftest.py  test_foundation.py  test_phase2_evidence.py  test_phase2_runtime.py
(+81 files in other folders)
