[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speecheval-api"
version = "0.1.0"
description = "CPU-first reproducible TTS evaluation API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "pydantic>=2.8,<3",
  "SQLAlchemy>=2.0,<3", "alembic>=1.13,<2", "psycopg[binary]>=3.2,<4",
  "PyYAML>=6,<7", "typer>=0.12,<1", "psutil>=6,<8", "prometheus-client>=0.20,<1", "dramatiq[redis]>=1.17,<2", "numpy>=1.26,<3", "pyloudnorm>=0.1.1,<1"
]
[project.optional-dependencies]
dev = ["pytest>=8,<10", "httpx>=0.27,<1", "ruff>=0.6,<1", "mypy>=1.11,<2", "types-PyYAML"]
[project.scripts]
speecheval = "app.cli:app"
[tool.hatch.build.targets.wheel]
packages = ["app"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM"]
ignore = ["B008", "E501", "E701", "E702"]
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["psutil"]
ignore_missing_imports = true
